# wordparser

./: .gitignore  CLAUDE.md  CLAUDE.md.bak  README.md  pyproject.toml  wordparser.bat
.claude/: settings.local.json
docs/: 2026-04-22-word-parser-design.md  2026-04-22-word-parser-plan.md  2026-04-23-libreoffice-multimodal-design.md  2026-04-23-libreoffice-multimodal-plan.md  lessons-learned.md
examples/: advanced_config.py  basic_usage.py
openspec/specs/wordparser-core/: spec.md
tests/: conftest.py  test_chart_extractor.py  test_cli.py  test_client.py  test_config.py  test_exceptions.py  test_formula_processor.py  test_formulas.py  test_images.py  test_integration.py  test_manual_heading.py  test_models.py  test_multimodal.py  test_parser.py  test_postprocess.py  test_preprocessor.py  test_renderer.py  test_report.py  test_smartart_extractor.py  test_structure.py  test_tables.py  test_toc.py
tests/fixtures/: 测试-BBB平台2024年新增功能工程需求规格说明书(迭代六).docx  测试文档_全元素覆盖.docx
wordparser/: __init__.py  config.py  exceptions.py  logger_config.py
wordparser/core/: chart_extractor.py  formulas.py  images.py  models.py  parser.py  postprocess.py  preprocessor.py  renderer.py  report.py  smartart_extractor.py  structure.py  tables.py  toc.py
wordparser/multimodal/: __init__.py  client.py  parallel.py  parser.py  prompts.py
wordparser_cli/: main.py
