[project]
name = "wordparser"
version = "0.1.0"
description = "Word文档转Markdown解析库"
requires-python = ">=3.10"

dependencies = [
    "python-docx>=1.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    "pdf2image>=1.16",
    "lxml>=4.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
wordparser = "wordparser_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wordparser*", "wordparser_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
