[project]
name = "wordparser"
version = "0.1.0"
description = "Word文档转Markdown解析库"
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "python-docx>=1.0",
    "httpx>=0.24",
    "pydantic>=2.0",
    # pdf2image requires system-level poppler library:
    #   Windows: choco install poppler  or  conda install -c conda-forge poppler
    #   macOS:   brew install poppler
    #   Linux:   sudo apt-get install poppler-utils
    "pdf2image>=1.16",
    "lxml>=4.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
cli = [
    "typer>=0.9",
    "rich>=13.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

# CLI entry point - wordparser_cli.main module will be implemented in Task 17
[project.scripts]
wordparser = "wordparser_cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wordparser*", "wordparser_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
